# markdown-prune

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  convert_bytes.rs  directory.rs  file.rs  main.rs  units.rs
