[package]
name = "markdown-prune"
version = "0.0.8"
edition = "2021"
description = "Utility for deleting all markdown files in a folder recursively"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
homepage = "https://github.com/hougesen/markdown-prune"
repository = "https://github.com/hougesen/markdown-prune"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
rust-version = "1.56"
keywords = ["cli", "markdown"]

[dependencies]
